Revision history for Perl extension AnyEvent::RabbitMQ

1.21 Sat 30 May 23:40:54 BST 2020
        - No changes.

1.20_01  Sat 23 May 23:29:50 BST 2020
        - Add "no_ack" flag to "get" method. (Julio Polo)
        - Prevent channelMax from overflowing.
          https://rt.cpan.org/Ticket/Display.html?id=97716 (Carl Hörberg)
        - Merge in documentation patch from
          https://rt.cpan.org/Ticket/Display.html?id=88213 (Rod Taylor)

1.20  Sun 17 May 14:22:17 BST 2020
        - Downgrade error to a warning.

1.19_01  Sat 16 May 21:18:27 BST 2020
        - Allow AnyEvent::TLS options to be passed (Nicolas R).
        - Correct check when in confirm mode (Ruslan Zakirov).
        - Fix @INC breaking perls >= 5.26 (Nicolas R).
        - Minor test fixes

1.19  Sat Mar 21 16:49:24 GMT 2015
        - Add 'no_ack' as an optional argument to the ->consume method
          (Dave Mueller).
        - Fill in some missing documentation (Moritz Lenz).
1.18  Mon Sep 29 19:36:00 PDT 2014
        - Added the bind_exchange and unbind_exchange methods
          for exchange-exchange bindings.

1.17  Fri Jul 25 14:02:00 PDT 2014
        - Add support for chunking large bodies into multiple AMQP frames,
          allowing the sending of large messages.

1.16  Sat Apr 12 14:42:00 BST 2014
        - Doc fixes (Mark Ellis)
        - Fix leak when calling ->close + tests (Peter Haworth)

1.15  Mon Jul 1 12:35:00 BST 2013
        - Fix paper-bag bug in connection close - calling nonexistent method.

1.14  Fri Jun  7 08:54:00 BST 2013
        - Fix paper-bag bug in heartbeat - always lost heartbeat even on
          active connections
        - on channel close, automatically call on_return callbacks for any
          publishes that are waiting
        - maintain more state around opening and closing to avoid hang/race
          when server sends Close after client does (this is possible!)
        - cope with AMQP quirk that in confirm mode, returned messages are