@@ -16,6 +16,8 @@ x_contributors = Masahito Ikuta <cooldaemon@gmail.com>
 x_contributors = Rod Taylor <rod.taylor@gmail.com>
 x_contributors = Carl Hörberg <carl@cloudamqp.com>
 x_contributors = Julio Polo <julio@hawaii.edu>
+x_contributors = A.J. Ragusa <aragusa@globalnoc.iu.edu>
+x_contributors = José Micó
 
 [InstallGuide]
 [CPANFile]
