@@ -1,5 +1,9 @@
 Revision history for Perl extension AnyEvent::RabbitMQ
 
+        - Add "nodelay" option to disable Nagle's algorithm.
+          https://rt.cpan.org/Ticket/Display.html?id=119793
+          Also José Micó's e888205306fb49167c0dc9aa4e4dc940cc922d25.
+
 1.21 Sat 30 May 23:40:54 BST 2020
         - No changes.
 
